--- a/notifier/package.json
+++ b/notifier/package.json
@@ -1,1 +1,14 @@
-{"dependencies":{"body-parser":"^1.19.0","express":"^4.17.1","node-notifier":"^10.0.0"}}
+{
+  "name": "notifier",
+  "version": "1.0.0",
+  "description": "test",
+  "main": "notifier.js",
+  "build": {
+    "appId": "com.notifier.id"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "node-notifier": "^10.0.0"
+  }
+}
